--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,5 +15,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: whoami
+        run: sudo chown -R runner /home/runner
 
