--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,7 +19,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: sudo chown -R runner /home/runner
+        run: touch hoge
+
+      - name: aa
+        run: pwd
+
+      - name: bb
+        run: ls -la
 
       - name: hoge
         run: whoami
