--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,21 +13,22 @@ jobs:
 
     container:
       image: ruby:3.0.1
+      env:
+        BUNDLE_JOBS: 3
+        BUNDLE_RETRY: 3
+        RAILS_ENV: test
+        RACK_ENV: test
+        BUNDLE_PATH: vendor/bundle
 
     steps:
       - uses: actions/checkout@v2
 
+      - run: gem install bundler
+        
       - uses: actions/cache@v3
         with:
-          path: fuga
-          key: fuga
+          path: vendor/bundle
+          key: bundle-${{ hashFiles('**/Gemfile.lock') }}
 
-      - name: Build image
-        run: mkdir -p fuga && touch fuga/hoge
-
-      - name: aa
-        run: pwd
-
-      - name: bb
-        run: ls -la
+      - run: bundle check || bundle install
 
